adding scripts